Refactor JWT token generation method
Refactor JWT token generation to use String.format for payload and simplify header definition.